Externalize mail-sender library